Fix AuthenticatorBleEnterPairingModeSheetModel.

String no longer contains a placeholder, do not try to substitute one.

Bug: 875531
Change-Id: I53acc969a58a270ed14011b37177329bbcaaf644
TBR: hongjunchoi@chromium.org
Reviewed-on: https://chromium-review.googlesource.com/1180898
Reviewed-by: Balazs Engedy <engedy@chromium.org>
Commit-Queue: Balazs Engedy <engedy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584393}
Former-commit-id: adfed495d248573bd5925c01501b9d5016fe4906